--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <div class="logo-area">
-            <img src="logo-placeholder.png" alt="Cold Up North Logo" class="band-logo" />
+            <img src="WhatsApp Image 2025-06-12 at 10.34.21_5db2e256.jpg" alt="Cold Up North Logo" class="band-logo" />
             
         </div>
     </div>
